Add iam:DeleteRolePolicy permission to GithubRole

--- a/cloud-formation/github-role.yaml
+++ b/cloud-formation/github-role.yaml
@@ -46,6 +46,7 @@ Resources:
                   iam:CreateRole,
                   iam:CreateUser,
                   iam:DeleteRole,
+                  iam:DeleteRolePolicy,
                   iam:DeleteUser,
                   iam:DeleteUserPolicy,
                   iam:GetRole,
