Add iam:DeleteUser permission to GithubRole

--- a/cloud-formation/github-role.yaml
+++ b/cloud-formation/github-role.yaml
@@ -44,6 +44,7 @@ Resources:
                 "Effect": Allow,
                 "Action": [
                   iam:CreateUser,
+                  iam:DeleteUser,
                   iam:GetRole,
                   iam:GetUser,
                   iam:ListAccessKeys,
