Rename .yml files to .yaml
This includes cloud formation templates
and GitHub action workflows

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -26,5 +26,5 @@ jobs:
         uses: aws-actions/aws-cloudformation-github-deploy@v1
         with:
           name: GoCaptureECSCluster
-          template: cloud-formation/ecs.yml
+          template: cloud-formation/ecs.yaml
           no-fail-on-empty-changeset: 1
