--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -20,7 +20,7 @@ jobs:
         uses: aws-actions/aws-cloudformation-github-deploy@v1
         with:
           name: GoCaptureGithubRole
-          template: cloud-formation/github-role.yml
+          template: cloud-formation/github-role.yaml
           parameter-overrides: "Repository=${{ github.repository }}"
           capabilities: CAPABILITY_NAMED_IAM
           no-fail-on-empty-changeset: 1
@@ -29,7 +29,7 @@ jobs:
         uses: aws-actions/aws-cloudformation-github-deploy@v1
         with:
           name: GoCaptureECR
-          template: cloud-formation/ecr.yml
+          template: cloud-formation/ecr.yaml
           no-fail-on-empty-changeset: 1
 
       - name: Login to Amazon ECR
