Add iam:PutRolePolicy to GithubRole

--- a/cloud-formation/github-role.yml
+++ b/cloud-formation/github-role.yml
@@ -73,6 +73,11 @@ Resources:
                 "Action": iam:PutRoleRole,
                 "Resource": "*"
               },
+              {
+                "Effect": Allow,
+                "Action": iam:PutRolePolicy,
+                "Resource": "*"
+              },
             ]
           }
         - PolicyName: EcrPolicy
