--- a/cloud-formation/beta-deploy-user.yaml
+++ b/cloud-formation/beta-deploy-user.yaml
@@ -17,4 +17,4 @@ Resources:
           - Effect: Allow
             Action:
               - ecr:GetAuthorizationToken
-            Resource: *
+            Resource: "*"
