--- a/.github/workflows/users.yaml
+++ b/.github/workflows/users.yaml
@@ -1,10 +1,15 @@
 name: Users
 on:
-  push:
+  workflow_run:
+    workflows:
+      - Build
+    types:
+      - completed
 
 jobs:
   deploy_users:
     runs-on: ubuntu-latest
+    if: ${{ github.event.workflow_run.conclusion == 'success' }}
     permissions:
       id-token: write
     steps:
