Add iam:GetUser permission to GithubRole

--- a/cloud-formation/github-role.yaml
+++ b/cloud-formation/github-role.yaml
@@ -44,6 +44,7 @@ Resources:
                 "Effect": Allow,
                 "Action": [
                   iam:GetRole,
+                  iam:GetUser,
                   iam:PutRolePolicy,
                   iam:PutRoleRole,
                   iam:UpdateAssumeRolePolicy,
