--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -25,6 +25,14 @@ jobs:
           capabilities: CAPABILITY_NAMED_IAM
           no-fail-on-empty-changeset: 1
 
+      - name: Beta Deploy User
+        uses: aws-actions/aws-cloudformation-github-deploy@v1
+        with:
+          name: GoCaptureBetaDeployUser
+          template: cloud-formation/beta-deploy-user.yaml
+          capabilities: CAPABILITY_NAMED_IAM
+          no-fail-on-empty-changeset: 1
+
       - name: Deploy ECR repository
         uses: aws-actions/aws-cloudformation-github-deploy@v1
         with:
