Add iam:CreateUser permission to GithubRole

--- a/cloud-formation/github-role.yaml
+++ b/cloud-formation/github-role.yaml
@@ -43,6 +43,7 @@ Resources:
               {
                 "Effect": Allow,
                 "Action": [
+                  iam:CreateUser,
                   iam:GetRole,
                   iam:GetUser,
                   iam:PutRolePolicy,
