--- a/cloud-formation/github-role.yaml
+++ b/cloud-formation/github-role.yaml
@@ -46,8 +46,10 @@ Resources:
                   iam:CreateUser,
                   iam:GetRole,
                   iam:GetUser,
+                  iam:ListAccessKeys,
                   iam:PutRolePolicy,
                   iam:PutRoleRole,
+                  iam:PutUserPolicy,
                   iam:UpdateAssumeRolePolicy,
                 ],
                 "Resource": "*"
