Add iam:DeleteUserPolicy permission to GithubRole

--- a/cloud-formation/github-role.yaml
+++ b/cloud-formation/github-role.yaml
@@ -45,6 +45,7 @@ Resources:
                 "Action": [
                   iam:CreateUser,
                   iam:DeleteUser,
+                  iam:DeleteUserPolicy,
                   iam:GetRole,
                   iam:GetUser,
                   iam:ListAccessKeys,
