--- a/cloud-formation/ecr.yaml
+++ b/cloud-formation/ecr.yaml
@@ -7,3 +7,9 @@ Resources:
         EncryptionType: AES256
       ImageScanningConfiguration:
         ScanOnPush: true
+
+Outputs:
+  GoCaptureRepository:
+    Value: !Ref Repository
+    Export:
+      Name: !Sub '${AWS::StackName}-Repository'
