Limit BetaDeployUser to repository created in GoCaptureECR stack.

--- a/cloud-formation/beta-deploy-user.yaml
+++ b/cloud-formation/beta-deploy-user.yaml
@@ -15,6 +15,8 @@ Resources:
           - Effect: Allow
             Action:
               - ecr:GetAuthorizationToken
-            Resource: "*"
+            Resource: !Sub
+              - '${Repository}/*'
+              - Repository: !ImportValue GoCaptureECR-Repository
       Users:
         - !Ref BetaDeployUser
