--- a/cloud-formation/beta-deploy-user.yaml
+++ b/cloud-formation/beta-deploy-user.yaml
@@ -17,6 +17,6 @@ Resources:
               - ecr:GetAuthorizationToken
             Resource: !Sub
               - '${Repository}/*'
-              - Repository: !ImportValue GoCaptureECR-Repository
+              - Repository: !ImportValue GoCaptureECR-RepositoryArn
       Users:
         - !Ref BetaDeployUser
