--- a/cloud-formation/ecr.yaml
+++ b/cloud-formation/ecr.yaml
@@ -10,6 +10,6 @@ Resources:
 
 Outputs:
   GoCaptureRepository:
-    Value: !Ref Repository
+    Value: !GetAtt Repository.Arn
     Export:
-      Name: !Sub '${AWS::StackName}-Repository'
+      Name: !Sub '${AWS::StackName}-RepositoryArn'
