Add ecr:DescribeRepositories permission to GithubRole

--- a/cloud-formation/github-role.yaml
+++ b/cloud-formation/github-role.yaml
@@ -69,6 +69,7 @@ Resources:
                   ecr:BatchGetImage,
                   ecr:CompleteLayerUpload,
                   ecr:CreateRepository,
+                  ecr:DescribeRepositories,
                   ecr:GetAuthorizationToken,
                   ecr:GetDownloadUrlForLayer,
                   ecr:InitiateLayerUpload,
