--- a/cloud-formation/beta-deploy-user.yaml
+++ b/cloud-formation/beta-deploy-user.yaml
@@ -14,6 +14,7 @@ Resources:
         Statement:
           - Effect: Allow
             Action:
+              - ecr:DescribeImages
               - ecr:DescribeRepositories
               - ecr:GetAuthorizationToken
             Resource: !ImportValue GoCaptureECR-RepositoryArn
