Add ecr:ListImages permission to BetaDeployUser

--- a/cloud-formation/beta-deploy-user.yaml
+++ b/cloud-formation/beta-deploy-user.yaml
@@ -20,6 +20,7 @@ Resources:
             Action:
               - ecr:DescribeImages
               - ecr:DescribeRepositories
+              - ecr:ListImages
             Resource: !ImportValue GoCaptureECR-RepositoryArn
       Users:
         - !Ref BetaDeployUser
