Add ecr:BatchGetImage permission to BetaDeployUser

--- a/cloud-formation/beta-deploy-user.yaml
+++ b/cloud-formation/beta-deploy-user.yaml
@@ -18,6 +18,7 @@ Resources:
             Resource: "*"
           - Effect: Allow
             Action:
+              - ecr:BatchGetImage
               - ecr:DescribeImages
               - ecr:DescribeRepositories
               - ecr:ListImages
