Add ecr:GetDownloadUrlForLayer permission to BetaDeployUser

--- a/cloud-formation/beta-deploy-user.yaml
+++ b/cloud-formation/beta-deploy-user.yaml
@@ -21,6 +21,7 @@ Resources:
               - ecr:BatchGetImage
               - ecr:DescribeImages
               - ecr:DescribeRepositories
+              - ecr:GetDownloadUrlForLayer
               - ecr:ListImages
             Resource: !ImportValue GoCaptureECR-RepositoryArn
       Users:
