--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -25,12 +25,17 @@ jobs:
           capabilities: CAPABILITY_NAMED_IAM
           no-fail-on-empty-changeset: 1
 
+      - name: Set ECR Stack Name
+        id: ecr-stack-name
+        run: echo ECR_STACK_NAME=GoCaptureECR >> $GITHUB_OUTPUT
+
       - name: Deploy ECR repository
         uses: aws-actions/aws-cloudformation-github-deploy@v1
         with:
-          name: GoCaptureECR
+          name: ${{ steps.ecr-stack-name.outputs.ECR_STACK_NAME }}
           template: cloud-formation/ecr.yaml
           no-fail-on-empty-changeset: 1
+
 
       - name: Beta Deploy User
         uses: aws-actions/aws-cloudformation-github-deploy@v1
