Add lifecyle policy to ecr repo

--- a/cloud-formation/ecr.yaml
+++ b/cloud-formation/ecr.yaml
@@ -7,7 +7,21 @@ Resources:
         EncryptionType: AES256
       ImageScanningConfiguration:
         ScanOnPush: true
-
+      LifecyclePolicy:
+        LifecyclePolicyText: {
+          "rules": [
+            {
+              "rulePriority": 1,
+              "description": "Keep newest",
+              "selection": {
+                "tagStatus": "any",
+                "countType": "imageCountMoreThan",
+                "countNumber": 5
+              },
+              "action": "expire"
+            }
+          ]
+        }
 Outputs:
   GoCaptureRepository:
     Value: !GetAtt Repository.Arn
