Add ecr:GetRepositoryPolicy to GithubRole

--- a/cloud-formation/github-role.yaml
+++ b/cloud-formation/github-role.yaml
@@ -72,6 +72,7 @@ Resources:
                   ecr:DescribeRepositories,
                   ecr:GetAuthorizationToken,
                   ecr:GetDownloadUrlForLayer,
+                  ecr:GetRepositoryPolicy,
                   ecr:InitiateLayerUpload,
                   ecr:PutImage,
                   ecr:UploadLayerPart
