--- a/cloud-formation/ecr.yaml
+++ b/cloud-formation/ecr.yaml
@@ -8,7 +8,20 @@ Resources:
       ImageScanningConfiguration:
         ScanOnPush: true
       LifecyclePolicy:
-        LifecyclePolicyText: '{ "rules": [ { "rulePriority": 1, "description": "Keep newest", "selection": { "tagStatus": "any", "countType": "imageCountMoreThan", "countNumber": 5 }, "action": "expire" } ] }'
+        LifecyclePolicyText: '{
+          "rules": [
+            {
+              "rulePriority": 1,
+              "description": "Keep newest",
+              "selection": {
+                "tagStatus": "any",
+                "countType": "imageCountMoreThan",
+                "countNumber": 5
+              },
+              "action": "expire"
+            }
+          ]
+        }'
 Outputs:
   GoCaptureRepository:
     Value: !GetAtt Repository.Arn
