Fix "action" in lifecycle policy

--- a/cloud-formation/ecr.yaml
+++ b/cloud-formation/ecr.yaml
@@ -19,7 +19,9 @@ Resources:
                   "countType": "imageCountMoreThan",
                   "countNumber": 5
                 },
-                "action": "expire"
+                "action": {
+                  "type": "expire"
+                }
               }
             ]
           }
