Add ecr:PutImageScanningConfiguration to GithubRole

--- a/cloud-formation/github-role.yaml
+++ b/cloud-formation/github-role.yaml
@@ -75,6 +75,7 @@ Resources:
                   ecr:GetRepositoryPolicy,
                   ecr:InitiateLayerUpload,
                   ecr:PutImage,
+                  ecr:PutImageScanningConfiguration,
                   ecr:PutLifecyclePolicy,
                   ecr:UploadLayerPart
                 ],
