Add ecr:ListTagsForResource to GithubRole

--- a/cloud-formation/github-role.yaml
+++ b/cloud-formation/github-role.yaml
@@ -74,6 +74,7 @@ Resources:
                   ecr:GetDownloadUrlForLayer,
                   ecr:GetRepositoryPolicy,
                   ecr:InitiateLayerUpload,
+                  ecr:ListTagsForResource,
                   ecr:PutImage,
                   ecr:PutImageScanningConfiguration,
                   ecr:PutLifecyclePolicy,
