Set up subdomain

--- a/nginx.conf
+++ b/nginx.conf
@@ -1,10 +1,12 @@
 upstream go_capture {
-    server go-capture:8000;
+    server localhost:8000;
 }
 
 server {
 
     listen 80;
+
+    server_name go-capture.code-apprentice.com
 
     location / {
         proxy_pass http://go_capture;
