--- a/nginx.conf
+++ b/nginx.conf
@@ -6,7 +6,7 @@ server {
 
     listen 80;
 
-    server_name go-capture.code-apprentice.com;
+    server_name go-capture-api.code-apprentice.com;
 
     location / {
         proxy_pass http://go_capture;
