--- a/nginx.conf
+++ b/nginx.conf
@@ -7,6 +7,7 @@ server {
     listen 80;
 
     server_name go-capture-api.code-apprentice.com;
+    client_max_body_size 0;
 
     location / {
         proxy_pass http://go_capture;
