--- a/nginx.conf
+++ b/nginx.conf
@@ -3,11 +3,23 @@ upstream go_capture {
 }
 
 server {
-
     listen 80;
+    server_name go-capture-api.code-apprentice.com;
+    return 301 https://$server_name$request_uri;
+}
+
+server {
+    listen 443 ssl http2;
 
     server_name go-capture-api.code-apprentice.com;
     client_max_body_size 0;
+
+    ssl_certificate /etc/letsencrypt/live/code-apprentice.com-0001/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/code-apprentice.com-0001/privkey.pem;
+    ssl_session_cache shared:SSL:10m;
+    ssl_protocols TLSv1.2 TLSv1.3;
+    ssl_ciphers "ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:DHE-RSA-AES128-GCM-SHA256:DHE-RSA-AES256-GCM-SHA384";
+    ssl_prefer_server_ciphers on;
 
     location / {
         proxy_pass http://go_capture;
@@ -15,5 +27,4 @@ server {
         proxy_set_header Host $host;
         proxy_redirect off;
     }
-
 }
