--- a/cloud-formation/github-role.yaml
+++ b/cloud-formation/github-role.yaml
@@ -130,6 +130,7 @@ Resources:
                   "ec2:DeleteSubnet",
                   "ec2:DeleteVpc",
                   "ec2:DescribeInternetGateways",
+                  "ec2:DescribeRouteTables",
                   "ec2:DescribeSecurityGroups",
                   "ec2:DescribeSubnets",
                   "ec2:DescribeVpcs",
