--- a/cloud-formation/github-role.yaml
+++ b/cloud-formation/github-role.yaml
@@ -118,6 +118,7 @@ Resources:
               {
                 "Effect": "Allow",
                 "Action": [
+                  "ec2:AssociateRouteTable",
                   "ec2:AttachInternetGateway",
                   "ec2:CreateInternetGateway",
                   "ec2:CreateRouteTable",
