--- a/cloud-formation/github-role.yaml
+++ b/cloud-formation/github-role.yaml
@@ -121,6 +121,7 @@ Resources:
                   "ec2:AssociateRouteTable",
                   "ec2:AttachInternetGateway",
                   "ec2:CreateInternetGateway",
+                  "ec2:CreateRoute",
                   "ec2:CreateRouteTable",
                   "ec2:CreateSecurityGroup",
                   "ec2:CreateSubnet",
