--- a/cloud-formation/github-role.yaml
+++ b/cloud-formation/github-role.yaml
@@ -94,18 +94,18 @@ Resources:
               {
                 "Effect": "Allow",
                 "Action": [
-                  "ecs:CreateCluster",
-                  "ecs:CreateService",
-                  "ecs:DeleteCluster",
-                  "ecs:DeleteService",
-                  "ecs:DeregisterTaskDefinition",
-                  "ecs:DescribeClusters",
-                  "ecs:DescribeServices",
-                  "ecs:RegisterTaskDefinition",
-                  "ecs:UpdateService",
-                  "iam:AttachRolePolicy",
-                  "iam:DetachRolePolicy",
-                  "iam:PassRole"
+                  ecs:CreateCluster,
+                  ecs:CreateService,
+                  ecs:DeleteCluster,
+                  ecs:DeleteService,
+                  ecs:DeregisterTaskDefinition,
+                  ecs:DescribeClusters,
+                  ecs:DescribeServices,
+                  ecs:RegisterTaskDefinition,
+                  ecs:UpdateService,
+                  iam:AttachRolePolicy,
+                  iam:DetachRolePolicy,
+                  iam:PassRole
                 ],
                 "Resource": "*"
               }
@@ -118,27 +118,27 @@ Resources:
               {
                 "Effect": "Allow",
                 "Action": [
-                  "ec2:AssociateRouteTable",
-                  "ec2:AttachInternetGateway",
-                  "ec2:CreateInternetGateway",
-                  "ec2:CreateRoute",
-                  "ec2:CreateRouteTable",
-                  "ec2:CreateSecurityGroup",
-                  "ec2:CreateSubnet",
-                  "ec2:CreateTags",
-                  "ec2:CreateVpc",
-                  "ec2:DeleteInternetGateway",
-                  "ec2:DeleteSecurityGroup",
-                  "ec2:DeleteSubnet",
-                  "ec2:DeleteVpc",
-                  "ec2:DescribeInternetGateways",
-                  "ec2:DescribeRouteTables",
-                  "ec2:DescribeSecurityGroups",
-                  "ec2:DescribeSubnets",
-                  "ec2:DescribeVpcs",
-                  "ec2:DetachInternetGateway",
-                  "ec2:ModifySubnetAttribute",
-                  "ec2:ModifyVpcAttribute"
+                  ec2:AssociateRouteTable,
+                  ec2:AttachInternetGateway,
+                  ec2:CreateInternetGateway,
+                  ec2:CreateRoute,
+                  ec2:CreateRouteTable,
+                  ec2:CreateSecurityGroup,
+                  ec2:CreateSubnet,
+                  ec2:CreateTags,
+                  ec2:CreateVpc,
+                  ec2:DeleteInternetGateway,
+                  ec2:DeleteSecurityGroup,
+                  ec2:DeleteSubnet,
+                  ec2:DeleteVpc,
+                  ec2:DescribeInternetGateways,
+                  ec2:DescribeRouteTables,
+                  ec2:DescribeSecurityGroups,
+                  ec2:DescribeSubnets,
+                  ec2:DescribeVpcs,
+                  ec2:DetachInternetGateway,
+                  ec2:ModifySubnetAttribute,
+                  ec2:ModifyVpcAttribute
                 ],
                 "Resource": "*"
               }
