--- a/cloud-formation/github-role.yaml
+++ b/cloud-formation/github-role.yaml
@@ -128,6 +128,7 @@ Resources:
                   ec2:CreateTags,
                   ec2:CreateVpc,
                   ec2:DeleteInternetGateway,
+                  ec2:DeleteRouteTable,
                   ec2:DeleteSecurityGroup,
                   ec2:DeleteSubnet,
                   ec2:DeleteVpc,
@@ -137,6 +138,7 @@ Resources:
                   ec2:DescribeSubnets,
                   ec2:DescribeVpcs,
                   ec2:DetachInternetGateway,
+                  ec2:DisassociateRouteTable,
                   ec2:ModifySubnetAttribute,
                   ec2:ModifyVpcAttribute
                 ],
