Add logs:CreateLogGroup permission to GithubRole

--- a/cloud-formation/github-role.yaml
+++ b/cloud-formation/github-role.yaml
@@ -105,7 +105,8 @@ Resources:
                   ecs:UpdateService,
                   iam:AttachRolePolicy,
                   iam:DetachRolePolicy,
-                  iam:PassRole
+                  iam:PassRole,
+                  logs:CreateLogGroup
                 ],
                 "Resource": "*"
               }
