Add logs:DeleteLogGroup permission to GithubRole

--- a/cloud-formation/github-role.yaml
+++ b/cloud-formation/github-role.yaml
@@ -106,7 +106,8 @@ Resources:
                   iam:AttachRolePolicy,
                   iam:DetachRolePolicy,
                   iam:PassRole,
-                  logs:CreateLogGroup
+                  logs:CreateLogGroup,
+                  logs:DeleteLogGroup
                 ],
                 "Resource": "*"
               }
