--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ opencv-python = "^4.6.0"
 Django = "^4.1.3"
 environs = "^9.5.0"
 gunicorn = "^20.1.0"
+celery = "^5.2.7"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.2.0"
