Use image from ECR instead of building
This is intended for deployment to production

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,5 @@
 services:
   api:
-    build: .
+    image: ${account_id}.dkr.ecr.us-west-1.amazonaws.com/go-capture:${image_hash}
     ports:
       - 8000:8000
