--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -51,9 +51,13 @@ jobs:
 
       - name: Build, tag, and push docker image to Amazon ECR
         env:
+          BRANCH_NAME: ${{ github.ref_name }}
           REGISTRY: ${{ steps.login-ecr.outputs.registry }}
           REPOSITORY: go-capture
           IMAGE_TAG: ${{ github.sha }}
         run: |
           docker build -t $REGISTRY/$REPOSITORY:$IMAGE_TAG .
-          docker push $REGISTRY/$REPOSITORY:$IMAGE_TAG
+          if [ $BRANCH_NAME = main ]
+          then
+            docker push $REGISTRY/$REPOSITORY:$IMAGE_TAG
+          fi
