--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -8,7 +8,16 @@ services:
       - 8000:8000
     volumes:
       - .:/api
+  worker:
+    build: .
+    command: "poetry run celery -A go_capture.tasks worker"
+    depends_on:
+      - broker
+    environment:
+      - CELERY_BROKER_URL=amqp://guest:guest@broker:5672
+    env_file:
+      - .env
+    volumes:
+      - .:/api
   broker:
     image: rabbitmq
-    ports:
-      - 5672:5672
