Use management image for rabbitmq

--- a/docker-compose-prod.yml
+++ b/docker-compose-prod.yml
@@ -15,4 +15,7 @@ services:
     env_file:
       - .env
   broker:
-    image: rabbitmq
+    image: rabbitmq:3-management
+    ports:
+      - 5672:5672
+      - 15672:15672
