--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -20,4 +20,7 @@ services:
     volumes:
       - .:/api
   broker:
-    image: rabbitmq
+    image: rabbitmq:3-management
+    ports:
+      - 5672:5672
+      - 15672:15672
