--- a/docker-compose-prod.yml
+++ b/docker-compose-prod.yml
@@ -12,6 +12,7 @@ services:
       - broker
     environment:
       - CELERY_BROKER_URL=amqp://guest:guest@broker:5672
+      - CELERY_RESULT_BACKEND=rpc
     env_file:
       - .env
   broker:
