--- a/docker-compose-prod.yml
+++ b/docker-compose-prod.yml
@@ -3,6 +3,8 @@ services:
     image: ${account_id}.dkr.ecr.us-west-1.amazonaws.com/go-capture:${image_hash}
     env_file:
       - .env
+    environment:
+      - CELERY_BROKER_URL=amqp://guest:guest@broker:5672
     ports:
       - 8000:8000
   worker:
