--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ Django = "^4.1.3"
 environs = "^9.5.0"
 gunicorn = "^20.1.0"
 celery = "^5.2.7"
+firebase-admin = "^6.1.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.2.0"
