--- a/docker-compose-prod.yml
+++ b/docker-compose-prod.yml
@@ -7,6 +7,8 @@ services:
       - CELERY_BROKER_URL=amqp://guest:guest@broker:5672
     ports:
       - 8000:8000
+    volumes:
+      - media:/api/media
   worker:
     image: ${image}:${tag}
     command: "poetry run celery -A go_capture.tasks worker"
@@ -17,8 +19,13 @@ services:
       - CELERY_RESULT_BACKEND=rpc
     env_file:
       - .env
+    volumes:
+      - media:/api/media
   broker:
     image: rabbitmq:3-management
     ports:
       - 5672:5672
       - 15672:15672
+
+volumes:
+  media:
