--- a/docker-compose-prod.yml
+++ b/docker-compose-prod.yml
@@ -1,6 +1,7 @@
 services:
   api:
     image: ${image}:${tag}
+    command: "poetry run gunicorn go_capture.wsgi:application --bind 0.0.0.0:8000 -t 60"
     env_file:
       - .env
     environment:
