--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,9 @@ firebase-admin = "^6.1.0"
 [tool.poetry.dev-dependencies]
 pytest = "^7.2.0"
 
+[tool.poetry.group.dev.dependencies]
+black = "^23.3.0"
+
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
