Run black in build workflow

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -10,6 +10,9 @@ jobs:
       - name: Checkout repo
         uses: actions/checkout@v3
 
+      - name: black
+        uses: psf/black@stable
+
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1-node16
         with:
