--- a/docker-compose-prod.yml
+++ b/docker-compose-prod.yml
@@ -1,6 +1,6 @@
 services:
   api:
-    image: ${account_id}.dkr.ecr.us-west-1.amazonaws.com/go-capture:${image_hash}
+    image: ${image}:${tag}
     env_file:
       - .env
     environment:
@@ -8,7 +8,7 @@ services:
     ports:
       - 8000:8000
   worker:
-    image: ${account_id}.dkr.ecr.us-west-1.amazonaws.com/go-capture:${image_hash}
+    image: ${image}:${tag}
     command: "poetry run celery -A go_capture.tasks worker"
     depends_on:
       - broker
