--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -6,6 +6,8 @@ services:
       - env/dev.env
     environment:
       - CELERY_BROKER_URL=amqp://guest:guest@broker:5672
+      - FIREBASE_CREDENTIALS_FILE=/run/secrets/firebase-credentials
+      - MEDIA_ROOT=/api/media
     ports:
       - 8000:8000
     secrets:
@@ -20,6 +22,8 @@ services:
     environment:
       - CELERY_BROKER_URL=amqp://guest:guest@broker:5672
       - CELERY_RESULT_BACKEND=rpc
+      - FIREBASE_CREDENTIALS_FILE=/run/secrets/firebase-credentials
+      - MEDIA_ROOT=/api/media
     env_file:
       - env/dev.env
     secrets:
