--- a/docker-compose-prod.yml
+++ b/docker-compose-prod.yml
@@ -7,7 +7,7 @@ services:
       - MEDIA_ROOT=/api/media
     env_file:
       - env/prod.env
-    image: ${image}:${tag}
+    image: ${IMAGE}:${TAG}
     ports:
       - 8000:8000
     secrets:
@@ -25,7 +25,7 @@ services:
       - MEDIA_ROOT=/api/media
     env_file:
       - env/prod.env
-    image: ${image}:${tag}
+    image: ${IMAGE}:${TAG}
     secrets:
       - firebase-credentials
     volumes:
