--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ python = "^3.11"
 Django = "^4.2.3"
 celery = "^5.3.1"
 environs = "^9.5.0"
+fastapi = "^0.100.0"
 firebase-admin = "^6.2.0"
 gunicorn = "^20.1.0"
 opencv-python = "^4.8.0.74"
