--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ fastapi = "^0.100.0"
 firebase-admin = "^6.2.0"
 gunicorn = "^20.1.0"
 opencv-python = "^4.8.0.74"
+uvicorn = "^0.22.0"
 
 [tool.poetry.group.dev.dependencies]
 black = "^23.3.0"
