--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ firebase-admin = "^6.2.0"
 gunicorn = "^20.1.0"
 opencv-python = "^4.8.0.74"
 uvicorn = "^0.22.0"
+python-multipart = "^0.0.6"
 
 [tool.poetry.group.dev.dependencies]
 black = "^23.3.0"
