--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -1,7 +1,7 @@
 services:
   api:
     build: .
-    command: "poetry run python3 /api/manage.py runserver 0.0.0.0:8000"
+    command: "poetry run uvicorn main:app --host 0.0.0.0 --port 8000"
     env_file:
       - env/dev.env
     environment:
@@ -16,7 +16,7 @@ services:
       - .:/api
   worker:
     build: .
-    command: "poetry run celery -A go_capture.tasks worker"
+    command: "poetry run celery -A tasks worker"
     depends_on:
       - broker
     environment:
