Automatically reload in dev container

--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -1,7 +1,7 @@
 services:
   api:
     build: .
-    command: "poetry run uvicorn main:app --host 0.0.0.0 --port 8000"
+    command: "poetry run uvicorn main:app --host 0.0.0.0 --port 8000 --reload"
     env_file:
       - env/dev.env
     environment:
