--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ black = {extras = ["d"], version = "^23.7.0"}
 mypy = "^1.4.1"
 pre-commit = "^3.3.3"
 pytest = "^7.4.0"
+celery-types = "^0.18.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
